--- a/bizbook-client/package.json
+++ b/bizbook-client/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "build": "ng build",
     "build:prod": "npm run build -- --prod --aot",
     "test": "ng test",
