smart table added in brand feature

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "build": "ng build",
     "build:prod": "npm run build -- --prod --aot",
     "test": "ng test",
@@ -58,11 +58,13 @@
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "nebular-icons": "1.1.0",
+    "ng2-completer": "^2.0.8",
+    "ng2-smart-table": "^1.4.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.4.0",
-    "rxjs-compat": "6.3.0",
+    "rxjs-compat": "^6.3.0",
     "socicon": "3.0.5",
     "typeface-exo": "0.0.22",
     "web-animations-js": "2.2.5",
