--- a/angular.json
+++ b/angular.json
@@ -19,21 +19,27 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": false,
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/font-awesome/css/font-awesome.min.css"
+              "./node_modules/font-awesome/css/font-awesome.min.css",
+              "./src/assets/css/main.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/popper.js/dist/umd/popper.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-
-              "src/assets/js/customtheme.js"
+              "./src/assets/js/main.js",
+              "./src/assets/js/plugins/bootstrap-datepicker.min.js",
+              "./src/assets/js/plugins/bootstrap-notify.min.js",
+              "./src/assets/js/plugins/dataTables.bootstrap.min.js",
+              "./src/assets/js/plugins/jquery.dataTables.min.js",
+              "./src/assets/js/plugins/jquery-ui.custom.min.js",
+              "./src/assets/js/plugins/moment.min.js",
+              "./src/assets/js/plugins/pace.min.js",
+              "./src/assets/js/plugins/select2.min.js",
+              "./src/assets/js/plugins/sweetalert.min.js"
             ]
           },
           "configurations": {
@@ -87,13 +93,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.css"],
             "scripts": []
           }
         },
@@ -105,9 +106,7 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         },
         "e2e": {
@@ -123,6 +122,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "bizbooks"
 }
